# content-filter

./: .gitignore
aho-corasick/: aho-corasick.vcxproj  setup_linux.py
aho-corasick/aho-corasick/src/: main.cpp
aho-corasick/src/: Matcher.cpp  main.cpp
data/: ethnic_words.txt  small_ethnic_data_lem.csv  small_ethnic_data_no_lem.csv
src/: classifier.py  document.py  document_storage.py  file_reader.py  handler.py  main.py  matcher.py  text_item.py  timer.py
src/aho-corasick/: CMakeLists.txt  Matcher.h  main.cpp  main_test.cpp
src/gui/: MainFrame.py
src/scripts/: find_all_words_inclusions.py  generate_most_ethnic_docs.py  setup_AhoCorasick.py
src/scripts/sqlite/: create_database.py
